# raptorq

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  RFC6330_ERRATA.md  deny.toml  justfile  py_publish.sh  pyproject.toml
.github/workflows/: ci.yml
benches/: codec_benchmark.rs  decode_benchmark.rs  encode_benchmark.rs  matrix_sparsity.rs  proxy_benchmark.rs  roundtrip_benchmark.rs
examples/: index.html  main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_raptorq.rs
python/: Cargo.toml  Makefile  README.md
python/src/: lib.rs
src/: arraymap.rs  base.rs  bin_encode_benchmark.rs  bin_matrix_sparsity.rs  constants.rs  constraint_matrix.rs  decoder.rs  encoder.rs  gf2.rs  graph.rs  iterators.rs  lib.rs  matrix.rs  octet.rs  octet_matrix.rs  octets.rs  operation_vector.rs  pi_solver.rs  python.rs  rng.rs  sparse_matrix.rs  sparse_vec.rs  symbol.rs  symbol_slab.rs  systematic_constants.rs  util.rs  wasm.rs
src/features_check/: error.rs  mod.rs
tests/: codec_tests.rs
