[package]
name = "raptorq-py"
description = "RaptorQ (RFC6330)"
license = "Apache-2.0"
repository = "https://github.com/cberner/raptorq"
version = "0.1.0"
authors = ["Felix Schorer <felixschorer@users.noreply.github.com>"]
edition = "2018"

[lib]
name = "raptorq"
crate-type = ["cdylib"]

[dependencies.raptorq]
path = "../"
version = "1.0.0"

[dependencies.pyo3]
version = "0.8.4"
features = ["extension-module"]